syntax = "proto3";

package api.stock.v1;

import "google/api/annotations.proto";

option go_package = "gostock/api/stock/v1;v1";
option java_multiple_files = true;
option java_package = "api.stock.v1";

service StockInfoService {
	rpc GetStockInfo (GetStockInfoRequest) returns (StockInfo) {
		option (google.api.http) = {
			get: "/stock/{id}"
		};
	};
}

message StockInfo {
    string ts_code = 1; // Y	TS代码
    string symbol	 = 2; //	Y	股票代码
    string name	 = 3; //	Y	股票名称
    string area	 = 4; //	Y	地域
    string industry	 = 5; //	Y	所属行业
    string fullname	 = 6; //	N	股票全称
    string enname = 7; //	N	英文全称
    string cnspell = 8; //	N	拼音缩写
    string market = 9; //	Y	市场类型（主板/创业板/科创板/CDR）
    string exchange	 = 10; //	N	交易所代码
    string curr_type = 11; //	N	交易货币
    string list_status = 12; //	N	上市状态 L上市 D退市 P暂停上市
    string list_date = 13; //	Y	上市日期 
    string delist_date = 14; //	N	退市日期
    string is_hs = 15; //	N	是否沪深港通标的，N否 H沪股通 S深股通

	bool is_leader = 16; //	N	是否为龙头
	string label_industry = 17; //	N 自定义行业标签
}

message GetStockInfoRequest {
	int32 id = 1;
}
